use new replacer functions